fix z-index

--- a/client/css/hallo.css
+++ b/client/css/hallo.css
@@ -26,6 +26,8 @@
   background-color: rgba(0,0,0,.7);
   border-radius: 6px;
   padding: 0 6px;
+  position: relative;
+  z-index: 9999;
 }
 
 .hallotoolbar span {
